--- a/backend/package.json
+++ b/backend/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@hapi/joi": "^17.1.1",
     "axios": "^1.10.0",
     "cookie-session": "^2.1.0",
     "cors": "^2.8.5",
